# Studize-Internship

./: README.md
JEE Mains Roadmap feature/: agents_definitions.docx  agents_v1_role.txt  langchain course points.txt
JEE Mains Roadmap feature/JEE Mains Roadmap finalv2/: README.md
JEE Mains Roadmap feature/JEE Mains Roadmap finalv2/crew-ai-Roadmap/: agents.py  file_io.py  main.py  pyproject.toml  tasks.py
JEE Mains Roadmap feature/JEE Mains Roadmap finalv2/crew-ai-Roadmap/tools/: search_tools.py
JEE Mains Roadmap feature/JEE Mains Roadmap finalv2/crew_ai_test/: agents.py  main.py  pyproject.toml  tasks.py
JEE Mains Roadmap feature/JEE Mains Roadmap finalv2/crew_ai_test/db/: chroma.sqlite3
JEE Mains Roadmap feature/JEE Mains Roadmap finalv2/crew_ai_test/tools/: search_tools.py
MInd Map feature/: Neo4j-5ce938f6-Created-2024-05-26.txt  mindmap using neo4j.txt
SOCA feature/: LLM prompts.docx
SOCA feature/Weightage/: Chemistry - Sheet1.csv  JEE Mains Chemistry Weightage - Sheet1.csv  JEE Mains Chemistry Weightage.xlsx  JEE Mains Maths Weightage - Sheet1.csv  JEE Mains Maths Weightage.xlsx  JEE Mains Physics Weightage - Sheet1.csv  JEE Mains Physics Weightage.xlsx  Maths - Sheet1.csv  Physics - Sheet1.csv  chemistry chapters segregation.docx  maths chapter segregation.docx  physics chapters segregation.docx
SOCA feature/scoa-v2-crewai/: README.md  agents.py  main.py  requirements.txt  tasks.py
